<resources>
    <string name="app_name">Reciting</string>
    <string name="prior">上一个</string>
    <string name="next">下一个</string>
    <string name="notice">重点</string>
    <string name="translate">翻译</string>
    <string name="t">" "</string>
    <string name="order">order</string>
    <string name="word">word</string>
    <string name="pronun">pronunciation</string>
    <string name="meaning">meaning</string>
</resources>